[tool.poetry]
name = "tetris.py"
version = "0.1.0"
description = "Simple Python Tetris running in a terminal"
authors = ["Alexis Svinartchouk <zvin@free.fr>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.6b0"
isort = "^5.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
